# cpl

./: CMakeLists.txt  LICENSE  README.md
0-intro/: guess.c  hello.c
1-types/: CMakeLists.txt  admin-scanf.c  admin.c  ascii.c  change.c  circle.c  equation.c  gas.c  julian.c  mol.c  pi-2.c  sensor.c  sphere.c
2-if-for-array/: CMakeLists.txt  blackhole.c  converter.c  factorial.c  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c  single.c  standup.c  triangle.c
3-for-a-while/: CMakeLists.txt  b-ternary-1.c  b-ternary-2.c  binary-search.c  bubble-sort.c  digits-do-while.c  digits-for.c  digits-while.c  flip.c  josephus.c  palindrome-1.c  palindrome.c  primes.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  behaviors.c  bit.c  game-of-life.c  guess_2.c  insertion-sort-bsearch.c  insertion-sort.c  magic-square.c  match.c  matrix-mult.c  merge.c  mines-1.c  sudoku.c
5-functions/: CMakeLists.txt  absolute-prime.c  converter-2.c  next-permutation.c  pair.c  radix.c  sum.c
test/: CMakeLists.txt  test_1.c  test_2.c  test_3.c  test_4.c
