add_executable(circle circle.c)
add_executable(sphere sphere.c)
add_executable(mol mol.c)
add_executable(admin admin.c)
add_executable(admin-scanf admin-scanf.c)
add_executable(ascii ascii.c)
add_executable(change change.c)
add_executable(pi-2 pi-2.c)
add_executable(sensor sensor.c)
add_executable(gas gas.c)
add_executable(equation equation.c)
target_link_libraries(sphere m)
target_link_libraries(pi-2 m)