add_executable(stars stars.c)
add_executable(primes primes.c)
add_executable(binary-search binary-search.c)
add_executable(digits-while digits-while.c)
add_executable(digits-do-while digits-do-while.c)
add_executable(digits-for digits-for.c)
add_executable(selection-sort selection-sort.c)
add_executable(palindrome-1 palindrome-1.c)
add_executable(flip flip.c)
add_executable(josephus josephus.c)
add_executable(bubble-sort bubble-sort.c)
add_executable(b-ternary-1 b-ternary-1.c)
add_executable(b-ternary-2 b-ternary-2.c)
add_executable(palindrome palindrome.c)
