add_executable(game-of-life game-of-life.c)
add_executable(merge merge.c)
add_executable(insertion-sort insertion-sort.c)
add_executable(insertion-sort-bsearch insertion-sort-bsearch.c)
add_executable(bit bit.c)
add_executable(behaviors behaviors.c)
add_executable(matrix-mult matrix-mult.c)
add_executable(guess_2 guess_2.c)
add_executable(sudoku sudoku.c)
add_executable(mines-1 mines-1.c)
add_executable(magic-square magic-square.c)
add_executable(match match.c)